<resources>
    <string name="app_name">Dam_Application</string>
    <string name="backgroud_image">Descripción de la imagen de fondo</string>
    <string name="go_test_txt">Ir a Test</string>
    <string name="go_next_txt">Siguiente</string>
    <string name="go_back_txt">Volver</string>
    <string name="Scorch_info_msg">Se llama Scorch. Es un comando clon del Gran Ejercito de la Republica.</string>
    <string name="welcome_msg">Bienvenido!</string>
    <string name="placeholder_txt">Placeholder</string>
</resources>