<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Descripción de la imagen para accesibilidad -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroud_image"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_pizarra"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingTop="48dp"
        android:paddingEnd="24dp"
        android:paddingBottom="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welcome_msg"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_actividad_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_test_txt" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_actividad_siguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_next_txt" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
